Align set icons with each other. Fixes #126

--- a/css/style.css
+++ b/css/style.css
@@ -108,19 +108,12 @@ img.rotate-180 {
  * set symbols
  */
 .list-group-item .icon {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-
-  height: 20px;
-  width: 20px;
-
-  text-align: center;
-  vertical-align: middle;
-}
-
-.list-group-item .ss {
+  align-items: center;
+  display: flex;
   font-size: 1.5em;
+  height: 1em;
+  justify-content: center;
+  width: 1em;
 }
 
 .card-title .icon {
